Closed Bug 152014 Opened 22 years ago Closed 22 years ago

IMAP: bad subject line crashes moz - Trunk M1BR [@ MSVCRT.DLL - apply_rfc2047_encoding]

Categories

(MailNews Core :: MIME, defect, P1)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: jorohr, Assigned: bugzilla)

References

()

Details

(Keywords: crash, testcase, topcrash+, Whiteboard: have fix,[adt1 rtm] [ETA 07/17])

Crash Data

Attachments

(2 files, 1 obsolete file)

Moz version: 20020610 from Debian Woody (mozilla-1.0.0-1)

I have received a message with a strange subject line consisting of several
lines. When I access the mailbox containing the resp. message, moz immediately
crashes.

When I edit the mailbox file and delete one of the "_"-characters right at the
end of the subject line, the crash doesn't occur anymore.

This is reproducable for me.

Here's the message that cause the crash. I don't know if it get's uploaded
properly but I've found no other way to add an attachment to my report.

Please have a look at the subject line and see if it crashes your moz, too.

--snip--
From CHUM-L@LISTSERV.GMD.DE  Tue Jul 18 18:42:28 2000
Return-Path: <CHUM-L@LISTSERV.GMD.DE>
Received: from localhost (root@localhost [127.0.0.1])
	by rudi.smail.uni-koeln.de (8.9.3/8.9.3/SuSE Linux 8.9.3-0.1) with ESMTP id SAA04501
	for <jr@localhost>; Tue, 18 Jul 2000 18:42:15 +0200
Received: from pop.smail.uni-koeln.de
	by localhost with IMAP (fetchmail-5.1.2)
	for jr@localhost (single-drop); Tue, 18 Jul 2000 18:42:15 +0200 (MEST)
Received: from mail1.rrz.Uni-Koeln.DE (mail1.rrz.Uni-Koeln.DE [134.95.100.208])
	by smail3.rrz.Uni-Koeln.DE (8.9.3/8.9.3) with ESMTP id OAA00162
	for <j.rohr@SMAIL.UNI-KOELN.DE>; Tue, 18 Jul 2000 14:39:00 +0200 (MET DST)
Received: from mail.listserv.gmd.de (mail.listserv.gmd.de [192.88.97.5])
	by mail1.rrz.Uni-Koeln.DE (8.9.3/8.9.3) with ESMTP id OAA02386
	for <j.rohr@SMAIL.UNI-KOELN.DE>; Tue, 18 Jul 2000 14:39:00 +0200 (MET DST)
Received: from mail.listserv.gmd.de (192.88.97.5) by mail.listserv.gmd.de (LSMTP
for OpenVMS v1.1a) with SMTP id <1.438D7A90@mail.listserv.gmd.de>; Tue, 18 Jul
2000 14:38:12 +0200
Received: from LISTSERV.GMD.DE by LISTSERV.GMD.DE (LISTSERV-TCP/IP release
          1.8d) with spool id 25036171 for CHUM-L@LISTSERV.GMD.DE; Tue, 18 Jul
          2000 14:38:08 +0200
Received: from linux.ncport.ru (195.91.145.2) by mail.listserv.gmd.de (LSMTP
          for OpenVMS v1.1a) with SMTP id <11.3C1E25EB@mail.listserv.gmd.de>;
          Tue, 18 Jul 2000 14:38:00 +0200
Received: from server (d2-262.dialup.ncport.ru [213.134.222.2]) by
          linux.ncport.ru (8.10.1/8.10.1) with SMTP id e6ICbXP26469 for
          <CHUM-L@LISTSERV.GMD.DE>; Tue, 18 Jul 2000 16:37:37 +0400
Received: by localhost with Microsoft MAPI; Tue, 18 Jul 2000 16:34:00 +0400
X-Mailer: Microsoft Internet E-mail/MAPI - 8.0.0.4211
MIME-Version: 1.0
Content-Type: text/plain; charset="us-ascii"
Content-Transfer-Encoding: 7bit
Message-ID:  <D1626B0F4B90D3119C3C008048D847F20327DA@SERVER>
Date:         Tue, 18 Jul 2000 16:32:08 +0400
Reply-To: Indigenous Peoples of Siberia and the Russian North
              <CHUM-L@LISTSERV.GMD.DE>
Sender: Indigenous Peoples of Siberia and the Russian North
              <CHUM-L@LISTSERV.GMD.DE>
From: Pavel Sulyandziga <udege@GLASNET.RU>
Organization: RAIPON
Subject:      =?KOI8-R?Q?____International_Youth_Conference___=22Indigenous_?=
             
=?KOI8-R?Q?Peoples_and_the_Environment_of_the_Russian_Arctic=22_=2C_Ag?=
              =?KOI8-R?Q?enda__________________________________________?=
To: CHUM-L@LISTSERV.GMD.DE
X-Keywords:                 
X-UID: 1
Status: RO
Content-Length: 3018
Lines: 103

          International Youth Conference
"Indigenous Peoples and the Environment of the Russian Arctic"
        Tomsk,  September 4 - 6, 2000

        Program

Sunday, September 3     ARRIVAL AND REGISTRATION

Monday, September 4

9:00 - 10:30                    OPENING PLENARY SESSION

Presentation of the AMAP-Report and the PAME-report,
Distribution of the chosen chapters

The Arctic Council and ACAP
 "What RAIPON can do", Oxana Haruchi

International and national initiatives on Children and Youth in the Arctic
Irina Shafrannik, RAIPON vice-president



10:45 - 12:30                   KEY PRESENTATION

Environmental problems due to industrial development in the regions

Preservation and development of the traditional knowledge and cultural
heritage

Industrial companies and indigenous peoples - compromise or conflict?

Demographic situation and health of indigenous peoples - policy for
survival
Larissa Abryutina, RAIPON vice-president



14:00 - 18:00           DISCUSSION AND PRESENTATIONS


The objectives of the discussion and presentations (10 min.) are:
*       To share experiences with other youth initiatives, fora and
organizations
*       To determine the role of young people in the solution of problems
*       To specify the role of indigenous youth, define its priorities and
actions

Tuesday, September 5

9:00 - 12:30                    WORK GROUPS SESSION



9:30 - 12:00                    DEVELOPING A YOUTH PROGRAM

The working groups will develop project proposals on the basis of  LFA and
the draft resolution

12:00 - 12:30           Discussion adjourning in work groups and preparation for
Plenary
                                               Comments and question to
each proposal

14:00 - 15:00           Return to Plenary for presentation of the work groups plans

15:00 - 18:00           Presentation of the (selected) project proposals (10 min)
15:30 - 21:00           Elaboration of the program's overall plan to be presented
to the Plenary (initiative group)


Wednesday, September 6  CLOSING PLENARY SESSION

The objective of this session is to explore the upcoming opportunities for
close cooperation and networking

09:00 - 09:20           Presentation of the Youth Program visionary plan

9:20 - 10:00            Voting for text ammendments changes, adoption of resolution
 (5 min.)

10:00 - 12:30           DISCUSSION ON YOUTH COOPERATION

Main issues to be discussed:
*       joint projects and initiatives
*       video and Internet (modern information technologies)
*       elders' counsel and experize
*       summer camps
*       art competitions
*       training and internships
*       leadership programs
*       network establishment
*       participation in decision-making
*       conferences and workshops
*       conflict resolution

14:00 - 18:00   SEMINAR
 "How you write a project within LFA, using AMAP-recommendations", Thomas
Kohler, Project consultant and Daria Kudriashova

18.00 - 21:00           RECEPTION

Thursday, September 7   DEPARTURE

--snap
Reporter: Could you provide TalkBack incident ID?
Severity: major → critical
Keywords: crash, stackwanted
Unfortunately not. I use the Debian package which not built against talkback.
I could do a strace and post the final lines if that helps.

Johannes
Here is the strace output from the point where mozilla tries to access the
folder containing the malformed message. 

unlink("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash.msf") = 0
stat64("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash.msf",
0xbfffee28) = -1 ENOENT (No such file or directory)
stat64("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash.msf",
0xbfffee18) = -1 ENOENT (No such file or directory)
stat64("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash",
0xbfffeeb8) = -1 ENOENT (No such file or directory)
stat64("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash.msf",
0xbfffedd8) = -1 ENOENT (No such file or directory)
open("/home/jr/.mozilla/default/6gy1nn3b.slt/ImapMail/localhost/mozcrash.msf",
O_RDWR|O_CREAT|O_TRUNC, 0666) = 40
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 716301}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, 0) = 1
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
gettimeofday({1024167652, 738068}, NULL) = 0
gettimeofday({1024167652, 740186}, NULL) = 0
gettimeofday({1024167652, 742505}, NULL) = 0
kill(5870, SIGRTMIN)                    = 0
gettimeofday({1024167652, 747306}, NULL) = 0
gettimeofday({1024167652, 749425}, NULL) = 0
gettimeofday({1024167652, 751725}, NULL) = 0
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 758957}, NULL) = 0
gettimeofday({1024167652, 763692}, NULL) = 0
gettimeofday({1024167652, 764236}, NULL) = 0
write(7, "5\20\4\0@\3 \2.\0\0\0\27\0\27\0;\3\5\0\216\0 \2\0\0\0\0"..., 1808) = 1808
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 768326}, NULL) = 0
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 773539}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 774700}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 775740}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 776726}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 777338}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 778256}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 778865}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 779781}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 780441}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 781357}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 781963}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 782878}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 783485}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 784708}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 785314}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 814222}, NULL) = 0
gettimeofday({1024167652, 814529}, NULL) = 0
gettimeofday({1024167652, 814815}, NULL) = 0
gettimeofday({1024167652, 815393}, NULL) = 0
kill(5870, SIGRTMIN)                    = 0
gettimeofday({1024167652, 816214}, NULL) = 0
gettimeofday({1024167652, 816497}, NULL) = 0
gettimeofday({1024167652, 817022}, NULL) = 0
read(5, "\372", 1)                      = 1
gettimeofday({1024167652, 817622}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN}], 3,
0) = 0
gettimeofday({1024167652, 821469}, NULL) = 0
gettimeofday({1024167652, 825405}, NULL) = 0
gettimeofday({1024167652, 825834}, NULL) = 0
write(7, "5\20\4\0K\3 \2.\0\0\0\27\0\27\0;\3\5\0\361\2 \2\0\0\0\0"..., 1672) = 1672
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 828739}, NULL) = 0
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 833279}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 836975}, NULL) = 0
gettimeofday({1024167652, 837453}, NULL) = 0
gettimeofday({1024167652, 839969}, NULL) = 0
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 852976}, NULL) = 0
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, 0) = 1
kill(5883, SIGRTMIN)                    = 0
kill(5883, SIGRTMIN)                    = 0
rt_sigprocmask(SIG_SETMASK, NULL, [RTMIN], 8) = 0
rt_sigsuspend([] <unfinished ...>
--- SIGRTMIN (Real-time signal 0) ---
<... rt_sigsuspend resumed> )           = -1 EINTR (Interrupted system call)
sigreturn()                             = ? (mask now [RTMIN])
write(6, "\372", 1)                     = 1
gettimeofday({1024167652, 878465}, NULL) = 0
gettimeofday({1024167652, 880806}, NULL) = 0
write(7, "5\20\4\0T\3 \2.\0\0\0\305\2\20\0;\3\5\0\220\0 \2\0\0\0"..., 520) = 520
ioctl(7, 0x541b, [0])                   = 0
poll([{fd=7, events=POLLIN}, {fd=35, events=POLLIN}, {fd=5, events=POLLIN,
revents=POLLIN}], 3, -1) = 1
gettimeofday({1024167652, 891157}, NULL) = 0
--- SIGSEGV (Segmentation fault) ---
unlink("/home/jr/.mozilla/default/6gy1nn3b.slt/lock") = 0
_exit(11)                               = ?
Since I don't have talkback, is there any advisory how I can collect the
required  data manually? The last resort would be to download a talkback enabled
build from mozilla.org. But I guess there is no guarantee that the crash can be
reproduced with a different build.
Hi there again, I could reproduce the crash with a talkback enabled build from
mozilla.org. The incident ID is TB7379178H
Crash can be reproduced on Windows as well. Talkback incident ID TB7389204M
QA Contact: gayatri → stephend
MSVCRT.DLL + 0x3b44 (0x78003b44)
apply_rfc2047_encoding
[d:\builds\seamonkey\mozilla\mailnews\mime\src\comi18n.cpp, line 782]
MIME_EncodeMimePartIIStr
[d:\builds\seamonkey\mozilla\mailnews\mime\src\comi18n.cpp, line 1142]
nsMimeConverter::EncodeMimePartIIStr_UTF8
[d:\builds\seamonkey\mozilla\mailnews\mime\src\nsMimeConverter.cpp, line 160]
NS_MsgStripRE [d:\builds\seamonkey\mozilla\mailnews\base\util\nsMsgUtils.cpp,
line 429]
nsParseMailMessageState::InternSubject
[d:\builds\seamonkey\mozilla\mailnews\local\src\nsParseMailbox.cpp, line 1071]
nsParseMailMessageState::FinalizeHeaders
[d:\builds\seamonkey\mozilla\mailnews\local\src\nsParseMailbox.cpp, line 1298]
nsParseMailMessageState::ParseFolderLine
[d:\builds\seamonkey\mozilla\mailnews\local\src\nsParseMailbox.cpp, line 616]
nsParseMailMessageState::ParseAFolderLine
[d:\builds\seamonkey\mozilla\mailnews\local\src\nsParseMailbox.cpp, line 597]
nsImapMailFolder::ParseAdoptedHeaderLine
[d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapMailFolder.cpp, line 2536]
XPTC_InvokeByIndex
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp,
line 106]
EventHandler [d:\builds\seamonkey\mozilla\xpcom\proxy\src\nsProxyEvent.cpp, line
568]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 597]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 530]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line
1078]
KERNEL32.DLL + 0x248f7 (0xbff848f7)
0x00648bfa
0x00058f64 
Confirming and -> MIME (also changing OS regarding comment 6).
Assignee: mscott → ducarroz
Component: Mail Back End → MIME
Keywords: stackwanted
OS: Linux → All
QA Contact: stephend → gayatri
Summary: IMAP: bad subject line crashes moz → IMAP: bad subject line crashes moz [@ apply_rfc2047_encoding]
QA Contact: gayatri → stephend
Attached patch proposed patch (obsolete) — Splinter Review
add null pointer check before calling str*() C API.
Change status to NEW.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 88156 [details] [diff] [review]
proposed patch

encodedword_head is a char array on the stack, therefore it cannot be null but
could potentially contains garbage. You should instead check
encodedword_headlen:

  if (encodedword_headlen > 0) {
    strcpy(o, encodedword_head);
    olen += encodedword_headlen;
    linelen += encodedword_headlen;
    o += encodedword_headlen;
  }
  if (!foldingonly)
    *pUCS2 = 0;

Also, you should replace those strcpy by strncpy to prevent any buffer overrun!
Attachment #88156 - Flags: needs-work+
Nominating adt1.0.0. since this is a potential security hole.
Set priority to P1.  Change Platform to All.
Add related nhotta to Cc.
Keywords: adt1.0.0
Priority: -- → P1
Hardware: PC → All
Keywords: mozilla1.0.1
Please update your patch to address ducarroz's comments and then add the
adt1.0.1 back to the bug.
Keywords: adt1.0.0
Talked to JFD over e-mail a while ago and he said he takes care of rest.
That's why I haven't update by myself.
Attached patch Proposed fix, v2Splinter Review
The real problem is not about missing null pointer checks but rather the fact
we don't detect correctly the end of the input stream when the folding appends
one characters before the end and the last character is either a space or a
tab. This fix address the end detection problem.
Attachment #88156 - Attachment is obsolete: true
Attached patch test messageSplinter Review
Test message to reproduce the problem (do not copy/past the sample posted by
the reporter, it won't work). Make sure to delete your msf file after a
succesfull test in order to be able to reproduce the crash again.
Status: NEW → ASSIGNED
Whiteboard: have fix
Comment on attachment 90527 [details] [diff] [review]
Proposed fix, v2

r=cavin. Good one.
Attachment #90527 - Flags: review+
Comment on attachment 90527 [details] [diff] [review]
Proposed fix, v2

sr=bienvenu
Attachment #90527 - Flags: superreview+
Fix checked in the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified FIXED with trunk builds from 7-12 on OS X 10.1.5, OS 9.2.2, Windows
2000 and RedHat Linux 7.3.

We should at least get this into Buffy.
Status: RESOLVED → VERIFIED
Keywords: nsbeta1
Adding nsbeta1+ and adt1 rtm
Keywords: nsbeta1adt1.0.1, nsbeta1+
Whiteboard: have fix → have fix,[adt1 rtm]
Blocks: 143047
Keywords: adt1.0.1adt1.0.1+, approval
Whiteboard: have fix,[adt1 rtm] → have fix,[adt1 rtm] [ETA 07/17]
Target Milestone: --- → mozilla1.0.1
adt1.0.1+ (on ADT's behalf) approval to checkin to the 1.0 branch, pending
Drivers' a=. pls check this in asap, then replace "Mozilla1.0.1+" with
"fixed1.0.1". thanks!
Comment on attachment 90527 [details] [diff] [review]
Proposed fix, v2

Approved for branch checkin
Fix checked in the branch
Verified FIXED with the 07-17-2002 Commercial Mozilla_1_0_Branch builds on:

Mac OS X 10.1.5, Windows 2000, Mac OS 9.2.2 and RedHat Linux 7.3.

Replacing fixed1.0.1 with verified1.0.1.
Updated summary with Trunk M1BR [@ MSVCRT.DLL - apply_rfc2047_encoding] and
added topcrash+, testcase keywords for future reference.  This *was* a
topcrasher on the MozillaTrunk and Gecko1.0 Branch under the MSVCRT.DLL stack
signature.
Keywords: testcase, topcrash+
Summary: IMAP: bad subject line crashes moz [@ apply_rfc2047_encoding] → IMAP: bad subject line crashes moz - Trunk M1BR [@ MSVCRT.DLL - apply_rfc2047_encoding]
Product: MailNews → Core
Product: Core → MailNews Core
Crash Signature: [@ MSVCRT.DLL - apply_rfc2047_encoding]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: