Fix for bug 152014. Better detection of end of input buffer when we fold one character before the end and the last character is either a space or a tab. R=cavin, SR=bienvenu